--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
   <section class="finance-section">
     <h2>Borrowed Money:</h2>
     <ul id="borrowedList" class="finance-list"></ul>
+    <button onclick="addNewBorrowed()">+</button>
   </section>
   <section class="finance-section">
     <h2>Already Paid:</h2>
     <ul id="paidList" class="finance-list-paid"></ul>
+    <button onclick="addNewPaid()">+</button>
   </section>
 
   <section class="finance-summary">
